--- a/src/oodj_assignment/GUI_Add_item.form
+++ b/src/oodj_assignment/GUI_Add_item.form
@@ -38,11 +38,11 @@
                           <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="Category" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="Item_name" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
-                          <Component id="Stock" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
+                          <Component id="txtItem_name" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
+                          <Component id="txtStock" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="Price" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
+                          <Component id="txtPrice" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
                           <Component id="SupplierComboBox" alignment="0" min="-2" pref="129" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -73,15 +73,15 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-              <Component id="Item_name" min="-2" max="-2" attributes="0"/>
+              <Component id="txtItem_name" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
-              <Component id="Stock" min="-2" max="-2" attributes="0"/>
+              <Component id="txtStock" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="Price" min="-2" max="-2" attributes="0"/>
+              <Component id="txtPrice" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -97,9 +97,9 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="Price">
+    <Component class="javax.swing.JTextField" name="txtPrice">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PriceActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPriceActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="SupplierComboBox">
@@ -188,14 +188,14 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;ItemCategory&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JTextField" name="Item_name">
+    <Component class="javax.swing.JTextField" name="txtItem_name">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Item_nameActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtItem_nameActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="Stock">
+    <Component class="javax.swing.JTextField" name="txtStock">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="StockActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtStockActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
